# easy-social-share

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
easy_social_share/: __init__.py  core.py
tests/: test_easy_social_share.py
